@@ -16,6 +16,9 @@ version 2.5.4 (??/??/????):
 	* Fix a crash in the Add Account dialog when changing protocols under
 	  certain circumstances.
 
+	Finch:
+	* Redirect stderr outputs to the debug window.
+
 version 2.5.3 (12/20/2008):
 	libpurple:
 	* The Buddy State Notification plugin no longer prints duplicate
